updated params